Issue #1 - for input and suggestions text alignment, realign it by screen size

--- a/src/css/_custom.css
+++ b/src/css/_custom.css
@@ -3,8 +3,20 @@
 }
 
 #input-search-bar {
-    text-align: center;
+    text-align: left;
     font-size: 1.5em;
+}
+.option {
+    text-align: left;
+}
+@media screen and (min-width: 48em) {
+    #input-search-bar {
+        text-align: center;
+        font-size: 1.5em;
+    }
+    .option {
+        text-align: center;
+    }
 }
 
 .weak {
